content/docs/0.12.x/reference/cli/commands/keptn_set_config.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn set config"
slug: keptn_set_config
---
## keptn set config

Sets flags of the CLI configuration

### Synopsis

Sets flags of the CLI configuration, which is stored in $HOME/.keptn/config.

This command takes a key and a new value as arguments and applies them to the local keptn CLI configuration
Supported keys:
 * AutomaticVersionCheck: true|false
 * KubeContextCheck: true|false


```
keptn set config [flags]
```

### Examples

```
keptn set config AutomaticVersionCheck false
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn set](../keptn_set/)	 - Sets flags of the CLI configuration

###### Auto generated by spf13/cobra on 25-Nov-2021
